5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4181/executions/1644_2703.log
== TEST (2019-04-11 17:07:10) 
-- CODE:
idade=int(input("idade:" )) 
if (idade >= 18):
	print("eleitor")
else:
	print("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 17:07:20) 
-- CODE:
idade=int(input("idade:" )) 
if (idade >= 18):
	print("eleitor")
else:
	print("nao_eleitor")
-- EXECUTION TIME:
0.144931
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:08:07) 
-- CODE:
var = int(input("idade"))
if(var=>18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if(var=>18):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:08:25) 
-- CODE:
var = int(input("idade"))
if(var>=18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
print(mensagem)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:08:33) 
-- CODE:
var = int(input("idade"))
if(var>=18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
print(mensagem)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:08:33) 
-- CODE:
var = int(input("idade"))
if(var>=18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
print(mensagem)
-- EXECUTION TIME:
0.150358
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
idadenao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
idadeeleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
idadeeleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:08:47) 
-- CODE:
var = int(input("idade"))
if(var>=18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
print(mensagem)
-- EXECUTION TIME:
0.179435
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
